--- a/package.json
+++ b/package.json
@@ -9,18 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/parser": "^7.26.2",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "codemirror": "^5.65.18",
+    "install": "^0.13.0",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.462.0",
+    "next": "14.2.16",
+    "npm": "^10.9.1",
     "react": "^18",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.0.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "eslint-config-next": "14.2.16",
+    "postcss": "^8",
+    "prettier": "3.4.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
